fix : fix valoranos side borders not showing bc scrollbar

--- a/styles.css
+++ b/styles.css
@@ -743,6 +743,9 @@ h2 {
 #valoranos{
 
     cursor: pointer;
+    width: 100svw;
+    border-top: 1px solid var(--naranja);
+    border-bottom: 1px solid var(--naranja);
 }
 
 #animated-image-stars{
@@ -766,7 +769,8 @@ h2 {
 
 #valoranos:hover{
     background-color: var(--marron-boton) !important;
-    border: 2px solid var(--naranja) !important;
+    border-top: 2px solid var(--naranja);
+    border-bottom: 2px solid var(--naranja);
 }
 
 
